--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -48,9 +48,18 @@
         <%= f.text_field :detail_qrcode, class: "form-control", placeholder: "二维码旁边描述" %>
       </div>
     <div class="form-group">
-      <label for="pic">产品图片</label>
+      <label for="pic">轮播图片</label>
       <%= f.file_field :pic, class: "form-control" %>
       <%= image_tag(@product.pic_url, class: "img-thumbnail", size: "300x300") if @product.pic? %>
+    </div>
+    <div class="form-group">
+      <label for="pic">产品图片(可多次上传)</label>
+      <span> <%= file_field_tag "file", id: "uploadify" %> </span>
+    </div>
+    <div class="form-group">
+      <div class="row" id="pic-product">
+        <%= render partial: 'ueditor_images/product_pic', collection: @product.product_pics if @product.product_pics.any?%>
+      </div>
     </div>
     <div class="form-group">
       <label for="profile">产品详情</label>
@@ -65,6 +74,22 @@
   $(function(){
     var editor = new UE.ui.Editor();
     editor.render("editor");
-    // $("#editor").hide();
   });
   </script>
+
+      <script type="text/javascript">
+        $(function(){
+           $("#uploadify").uploadify({
+                height        : 30,
+                swf           : '/assets/uploadify/uploadify.swf',
+                uploader      : '<%= product_pic_path(product_id: @product.id, format: 'js') %>',
+                width         : 120,
+                buttonText    : "上传图片",
+                method        : 'post',
+                'onUploadSuccess' : function(data, response) {
+                  eval(response);
+                }
+            });
+
+        })
+      </script>
