--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -56,9 +56,9 @@
 					<li class="<%= "active" if params[:controller].match(/companies/) %>">
 						<%= link_to "关于我们", new_admin_company_path %>
 					</li>
-					<li class="<%= "active" if params[:controller].match(/sliders/) %>">
-						<%= link_to "轮播和顶部图片", admin_sliders_path %>
-					</li>
+					<!--<li class="<%= "active" if params[:controller].match(/sliders/) %>">-->
+						<!--<%#= link_to "轮播和顶部图片", admin_sliders_path %>-->
+					<!--</li>-->
 					<li class="<%= "active" if params[:controller].match(/products/) %>">
 						<%= link_to "产品列表", admin_products_path %>
 					</li>
