--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -81,7 +81,7 @@
         $(function(){
            $("#uploadify").uploadify({
                 height        : 30,
-                swf           : '/assets/uploadify/uploadify.swf',
+                swf           : '/assets/uploadify.swf',
                 uploader      : '<%= product_pic_path(product_id: @product.id, format: 'js') %>',
                 width         : 120,
                 buttonText    : "上传图片",
