--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,8 +2,10 @@
   <div class="panel-body">
     <div class="subheader">
       用户列表
+      <% if current_user.name == 'Puke' %>
       <%= link_to new_admin_user_path, class: "pull-right" do %>
           <%= fa_icon("plus") %> 新增后台用户
+      <% end %>
       <% end %>
     </div>
     <% if @users.blank? %>
@@ -23,11 +25,13 @@
               <!--<div class="col-xs-6 col-sm-3 text-center">-->
                 <!--<%#= truncate(strip_tags(user.content), length: 40, omission: '...' ) %>-->
               <!--</div>-->
+              <% if current_user.name == 'Puke' %>
               <div class="col-xs-6 col-sm-9 text-center">
                 <%= link_to "编辑", edit_admin_user_path(user), class: "btn btn-primary" %>
                 <%= link_to "查看", admin_user_path(user), class: "btn btn-primary" %>
                 <%= link_to "删除", admin_user_path(user), class: "btn btn-danger", data: { confirm: "确定删除吗？", disable_with: "<i class='fa fa-spinner fa-spin'></i> 删除..." }, method: :delete, remote: true %>
               </div>
+              <% end %>
             </div>
         <% end %>
         <%= paginate @users %>
