--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="navbar-brand logo" href="/" style="margin-top: -12px"><%=image_tag("logo1.png")%></a>
+            <a class="navbar-brand logo" href="/" style="margin-top: -25px"><%=image_tag("logo.png")%></a>
         </div>
         <div class="navbar-collapse collapse" style="margin-left: 30px;">
             <ul class="nav navbar-nav navbar-left">
