--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -114,3 +114,12 @@
                 </div>
             </div>
         </div>
+
+        
+    <script type="text/javascript">
+    $(function(){
+      $('.carousel').carousel({
+      interval: 1000
+    })
+    })
+    </script>
