--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,10 +25,10 @@
     background-color:#555;
 }
 .carousel-indicators li {
-	border: 1px solid blue;
+	border: 1px solid white;
 }
 .carousel-indicators .active {
-	background-color: blue;
+	background-color: white;
 }
 .carousel-inner .item img {
 }
@@ -112,4 +112,11 @@
 	     <% end %>
 	      </div>
 	  </div>
+	  <script type="text/javascript">
+	  $(function(){
+	  	$('.carousel').carousel({
+		  interval: 1000
+		})
+	  })
+	  </script>
 </div>
