--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,5 +65,12 @@
     <%= javascript_include_tag 'application' %>
     </div>
  
+    <script type="text/javascript">
+    $(function(){
+      $('.carousel').carousel({
+        interval: 3000
+      })
+    })
+    </script>
 </body>
 </html>
