--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
 }
 /* Declare heights because of positioning of img element */
 .carousel-inner .item {
-    background-color:#555;
+    background-color: #ffffff;
 }
 .carousel-indicators li {
 	border: 1px solid white;
