--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,11 +28,11 @@ body {
 }
 
 
-.logo {
-    width: 163px;
-    height: 46px;
-    background: url(/assets/logo.png) no-repeat;
-}
+/*.logo {*/
+    /*width: 163px;*/
+    /*height: 46px;*/
+    /*background: url(/assets/logo.png) no-repeat;*/
+/*}*/
 
 /* MARKETING CONTENT
  * -------------------------------------------------- */
