--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -43,7 +43,7 @@
             <div class="goods-desc text-right">
                 <h5><strong style="line-height:1.8"><%= product.name %></strong></h5>
                 <p class="text-danger">
-                    ￥79.00                </p>
+                    <%= products.price %>                </p>
             </div>
              
             <!--div class="promotion">
