--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,21 @@
     border-radius: 0px;
   }
 
-
+.navbar-nav>li>a {
+	color: #101010;
+	&:hover {
+		background-color: #ffffff;
+		color: #8a6d3b;
+	}
+}
 body {
     background-color: #ffffff;
     padding-top: 51px;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid rgba(26, 26, 26, 0.35);
 }
