--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,11 @@
         </div>
         <div class="navbar-collapse collapse" style="margin-left: 30px;">
             <ul class="nav navbar-nav navbar-left">
-                <li class="<%= 'active' if controller_name=="welcome"%>"><%= link_to "首页", root_path, style: "color: #101010;" %></li>
-                <li class="<%= 'active' if controller_name=="products"%>"><%= link_to "在线商城", spread_products_path, style: "color: #101010;" %></li>
-                <li class="<%= 'active' if controller_name=="customes"%>"><%= link_to "私人定制", customes_path, style: "color: #101010;" %></li>
-                <li class="<%= 'active' if controller_name =="companies"%>"><%= link_to "关于我们", intro_path, style: "color: #101010;" %></a></li>
-                <li class="<%= 'active' if controller_name =="contacts"%>"><%= link_to "联系我们", contacts_path, style: "color: #101010;" %></a></li>
+                <li class="<%= 'active' if controller_name=="welcome"%>"><%= link_to "首页", root_path %></li>
+                <li class="<%= 'active' if controller_name=="products"%>"><%= link_to "在线商城", spread_products_path %></li>
+                <li class="<%= 'active' if controller_name=="customes"%>"><%= link_to "私人定制", customes_path %></li>
+                <li class="<%= 'active' if controller_name =="companies"%>"><%= link_to "关于我们", intro_path %></a></li>
+                <li class="<%= 'active' if controller_name =="contacts"%>"><%= link_to "联系我们", contacts_path %></a></li>
               <!--<li><a href="#">联系我们</a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right" id="ECS_MEMBERZONE">
@@ -60,7 +60,7 @@
     <%= yield %>
     <div class="foot-wrap">
       <div class="container">
-        <p class="pull-left">© 2005-2015 朴客酒 版权所有，并保留所有权利。<a href="#">京ICP备14055790号</a></p>
+        <p class="text-center">© 2005-2015 朴客酒 版权所有，并保留所有权利。</p>
       </div>
     <%= javascript_include_tag 'application' %>
     </div>
