--- a/app/views/products/spread.html.erb
+++ b/app/views/products/spread.html.erb
@@ -1,6 +1,6 @@
 <div class="container"> 
-	<div class="panel panel-default">
-	    <div class="panel-body">
+	<div>
+	    <div>
 	        <p></p>
 	        <p style="text-align: center;position:relative;">
 	        	<% @company.spreads.each_with_index do |product, cot| %>
