--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -26,6 +26,10 @@
         <label for="flavor">香型</label>
         <%= f.text_field :flavor, class: "form-control", placeholder: "香型" %>
       </div>
+      <div class="form-group">
+        <label for="flavor">品牌商</label>
+        <%= f.text_field :factory, class: "form-control", placeholder: "品牌商" %>
+      </div>
     </div>
       <div class="form-group">
         <label for="material">原料</label>
