活动和故事

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="panel panel-default">
         <div class="panel-body">
-        	<%= sanitize @product.content %>
+        	<%= sanitize @about.desc %>
         </div>
     </div>
 </div>
