--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                 <li class="<%= 'active' if controller_name=="products"%>"><%= link_to "在线商城", spread_products_path %></li>
                 <li class="<%= 'active' if controller_name=="customes"%>"><%= link_to "私人定制", customes_path %></li>
                 <li class="<%= 'active' if controller_name =="companies"%>"><%= link_to "关于我们", intro_path %></a></li>
-                <li class="<%= 'active' if controller_name =="contacts"%>"><%= link_to "联系我们", contacts_path %></a></li>
+                <li class="<%= 'active' if controller_name =="contacts"%>"><%= link_to "联系我们", contacts_path %></a></li><li class="<%= 'active' if controller_name =="abouts"%>"><%= link_to "朴客故事", abouts_index_path %></a></li>
               <!--<li style="color: #101010;margin-top: 2%;margin-left: 105%;width: 250px">在线咨询：010-57491998</li>-->
               <!--<li><a href="#">联系我们</a></li>-->
             </ul>
