--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -1,6 +1,6 @@
 
-<%= form_for([:admin, @product]) do |f| %>
-  <%= render partial: "shared/error_messages", locals: {obj: @product} %>
+<%= form_for([:admin, @activity]) do |f| %>
+  <%= render partial: "shared/error_messages", locals: {obj: @activity} %>
 <!--       <div class="form-group">
         <label for="name">产品名称</label>
         <%#= f.text_field :name, class: "form-control", placeholder: "产品名称" %>
@@ -39,10 +39,15 @@
         <label for="detail_qrcode">二维码旁边描述</label>
         <%#= f.text_field :detail_qrcode, class: "form-control", placeholder: "二维码旁边描述" %>
       </div> -->
+
+      <div class="form-group">
+      <label for="pic">发布</label>
+        <%= f.check_box :status, class: "form-control" %>
+      </div>
     <div class="form-group">
       <label for="pic">轮播图片</label>
       <%= f.file_field :pic, class: "form-control" %>
-      <%= image_tag(@product.pic_url, class: "img-thumbnail", size: "300x300") if @product.pic? %>
+      <%= image_tag(@activity.pic_url, class: "img-thumbnail", size: "300x300") if @activity.pic? %>
     </div>
 <!--     <div class="form-group">
       <label for="pic">产品图片(可多次上传)</label>
@@ -54,12 +59,12 @@
       </div>
     </div> -->
     <div class="form-group">
-      <label for="profile">产品详情</label>
+      <label for="profile">活动详情</label>
       <!-- <div id="editor"></div> -->
-    <%= f.text_area :content, placeholder: "产品详情", id: "editor" %>
+    <%= f.text_area :desc, placeholder: "活动详情", id: "editor" %>
     </div>
   <%= f.button "提交", class: "btn btn-success", data: { disable_with: "#{fa_icon("spinner spin", text: "提交...")}" } %>
-  <%= link_to "取消", admin_products_path, class: "btn btn-primary" %>
+  <%= link_to "取消", admin_activities_path, class: "btn btn-primary" %>
 <% end %>
 
   <script>
@@ -68,20 +73,3 @@
     editor.render("editor");
   });
   </script>
-
-      <script type="text/javascript">
-        $(function(){
-           $("#uploadify").uploadify({
-                height        : 30,
-                swf           : '/uploadify/uploadify.swf',
-                uploader      : '<%= product_pic_path(product_id: @product.id, format: 'js') %>',
-                width         : 120,
-                buttonText    : "上传图片",
-                method        : 'post',
-                'onUploadSuccess' : function(data, response) {
-                  eval(response);
-                }
-            });
-
-        })
-      </script>
