--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,58 +1,58 @@
 
 <%= form_for([:admin, @product]) do |f| %>
   <%= render partial: "shared/error_messages", locals: {obj: @product} %>
-<!--       <div class="form-group">
+      <div class="form-group">
         <label for="name">产品名称</label>
-        <%#= f.text_field :name, class: "form-control", placeholder: "产品名称" %>
+        <%= f.text_field :name, class: "form-control", placeholder: "产品名称" %>
       </div>
       <div class="form-group">
         <label for="origin">产地</label>
-        <%#= f.text_field :origin, class: "form-control", placeholder: "产地" %>
+        <%= f.text_field :origin, class: "form-control", placeholder: "产地" %>
       </div>
     <div class="form-inline">
       <div class="form-group">
         <label for="price">产品价格</label>
-        <%#= f.text_field :price, class: "form-control", placeholder: "产品价格" %>
+        <%= f.text_field :price, class: "form-control", placeholder: "产品价格" %>
       </div>
       <div class="form-group">
         <label for="weight">净含量</label>
-        <%#= f.text_field :weight, class: "form-control", placeholder: "净含量" %>
+        <%= f.text_field :weight, class: "form-control", placeholder: "净含量" %>
       </div>
       <div class="form-group">
         <label for="alco_level">酒精度</label>
-        <%#= f.text_field :alco_level, class: "form-control", placeholder: "酒精度" %>
+        <%= f.text_field :alco_level, class: "form-control", placeholder: "酒精度" %>
       </div>
       <div class="form-group">
         <label for="flavor">香型</label>
-        <%#= f.text_field :flavor, class: "form-control", placeholder: "香型" %>
+        <%= f.text_field :flavor, class: "form-control", placeholder: "香型" %>
       </div>
       <div class="form-group">
-        <label for="flavor">品牌商</label>
-        <%#= f.text_field :factory, class: "form-control", placeholder: "品牌商" %>
+        <label for="factory">品牌商</label>
+        <%= f.text_field :factory, class: "form-control", placeholder: "品牌商" %>
       </div>
     </div>
       <div class="form-group">
         <label for="material">原料</label>
-        <%#= f.text_field :material, class: "form-control", placeholder: "原料" %>
+        <%= f.text_field :material, class: "form-control", placeholder: "原料" %>
       </div>
       <div class="form-group">
         <label for="detail_qrcode">二维码旁边描述</label>
-        <%#= f.text_field :detail_qrcode, class: "form-control", placeholder: "二维码旁边描述" %>
+        <%= f.text_field :detail_qrcode, class: "form-control", placeholder: "二维码旁边描述" %>
       </div> -->
     <div class="form-group">
       <label for="pic">轮播图片</label>
       <%= f.file_field :pic, class: "form-control" %>
       <%= image_tag(@product.pic_url, class: "img-thumbnail", size: "300x300") if @product.pic? %>
     </div>
-<!--     <div class="form-group">
+     <div class="form-group">
       <label for="pic">产品图片(可多次上传)</label>
-      <span> <%#= file_field_tag "file", id: "uploadify" %> </span>
+      <span> <%= file_field_tag "file", id: "uploadify" %> </span>
     </div>
     <div class="form-group">
       <div class="row" id="pic-product">
-        <%#= render partial: 'ueditor_images/product_pic', collection: @product.product_pics if @product.product_pics.any?%>
+        <%= render partial: 'ueditor_images/product_pic', collection: @product.product_pics if @product.product_pics.any?%>
       </div>
-    </div> -->
+    </div>
     <div class="form-group">
       <label for="profile">产品详情</label>
       <!-- <div id="editor"></div> -->
